[package]
name = "config-2014-naga"
version = "0.1.2"
authors = ["Jeremy-Gstein <jeremy51b5@pm.me>"]
license = "MIT"
keywords = ["razer", "naga"]
readme = "README.md"
repository = "https://github.com/Jeremy-Gstein/config-2014-naga"
homepage = "https://github.com/Jeremy-Gstein/config-2014-naga"
description = "2014 razer naga key mapper for linux - a way to configure side buttons 1-12"
edition = "2021"

[dependencies]
evdev-rs = "0.2"
uinput = "0.1"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
