[package]
name = "config-2014-naga"
version = "0.2.3"
authors = ["Jeremy-Gstein <jeremy51b5@pm.me>"]
edition = "2021"
license = "MIT"
description = "2014 razer naga key mapper for linux - a way to configure side buttons 1-12"
repository = "https://github.com/Jeremy-Gstein/config-2014-naga"
homepage = "https://github.com/Jeremy-Gstein/config-2014-naga"
documentation = "https://docs.rs/config-2014-naga"
readme = "README.md"
categories = ["hardware-support"]
keywords = ["razer", "naga", "keybinding", "keymapper", "linux"]

[lib]
name = "config_2014_naga"
path = "src/lib.rs"

[[bin]]
name = "config-2014-naga"
path = "src/main.rs"

[dependencies]
evdev-rs = "0.2"
uinput = "0.1"
toml = "0.4"
serde = { version = "1.0", features = ["derive"] }
